# nexus

./: .clawd-todos.json  .dockerignore  .env.example  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  LICENSE  README.md  deploy.sh  docker-compose.yml
adapters/: requirements.txt
adapters/adapter/: __init__.py  base.py  deepseek.py  google.py  main.py  openai.py  registry.py
admin-dashboard/: Dockerfile  package.json
admin-dashboard/src/: App.tsx
admin-dashboard/src/pages/: Dashboard.tsx  Models.tsx  Providers.tsx  Transactions.tsx  Users.tsx
app/admin/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
app/admin/src/: App.tsx  auth.tsx  main.tsx  theme.ts
app/admin/src/api/: admin.ts
app/admin/src/components/: LoginModal.tsx  Modal.tsx  QrCodeModal.tsx
app/admin/src/i18n/: en.ts  index.tsx  zh.ts
app/admin/src/pages/: AuthCallback.tsx  BrowserAccounts.tsx  Chat.tsx  Dashboard.tsx  Login.tsx  Models.tsx  ProviderKeys.tsx  Providers.tsx  Transactions.tsx  Users.tsx
app/admin/src/utils/: errors.ts
app/client/: Dockerfile  app.json  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
app/client/src/: App.tsx  main.tsx  vite-env.d.ts
app/client/src/api/: client.ts
app/client/src/components/: ChatBubble.tsx  DocSidebar.css  DocSidebar.tsx  Layout.css  Layout.tsx  LoginModal.tsx
app/client/src/i18n/: en.ts  index.tsx  zh.ts
app/client/src/pages/: BalancePage.css  BalancePage.tsx  ChatPage.css  ChatPage.tsx  GuidePage.css  GuidePage.tsx  HomePage.css  HomePage.tsx  KeysPage.css  KeysPage.tsx  LoginPage.css  LoginPage.tsx  (+6 more)
clients/nova-chat/: package.json
clients/nova-chat/src/: App.tsx
clients/nova-chat/src-tauri/: tauri.conf.json
clients/nova-mobile/: app.json  package.json
clients/nova-mobile/src/: App.tsx
clients/shared/types/: index.ts
crates/api-gateway/: Cargo.toml
crates/api-gateway/src/: error.rs  main.rs
crates/api-gateway/src/middleware/: auth.rs  logging.rs
crates/api-gateway/src/routes/: auth.rs  me.rs  mod.rs
crates/api-gateway/src/routes/v1/: chat.rs  embeddings.rs  mod.rs  models.rs
crates/auth-service/: Cargo.toml
crates/auth-service/src/: jwt.rs  keygen.rs  lib.rs  validator.rs
crates/billing/: Cargo.toml
crates/billing/src/: lib.rs
crates/db/: Cargo.toml
crates/db/src/: lib.rs
crates/models/src/: lib.rs
crates/proto/: Cargo.toml  build.rs
crates/proto/proto/: nova.proto
crates/router-core/src/: context.rs  error.rs  fallback.rs  lib.rs  selector.rs
docs/: API.md  ARCHITECTURE.md
infra/k8s/: README.md
infra/k8s/base/: configmap.yaml  hpa.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  nexus-admin.yaml  nexus-client.yaml  nexus-service.yaml  postgres.yaml  redis.yaml  secret.yaml
migrations/: 001_create_users.sql  002_create_api_keys.sql  003_create_providers.sql  004_create_models.sql  005_create_usage_logs.sql  006_create_transactions.sql
scripts/: extract_cookies.py  setup.sh  start.sh  stop.sh
service/: Cargo.toml  Dockerfile  main.rs  rust-toolchain.toml
service/adapters/: Cargo.toml  Dockerfile
service/adapters/adapter/: __init__.py  anthropic.py  base.py  deepseek.py  google.py  main.py  openai.py  registry.py
service/adapters/src/: account_pool.rs  browser_emulator.rs  client.rs  config.rs  deepseek_web.rs  error.rs  headless_browser.rs  lib.rs  providers.rs  types.rs
service/adapters/src/tool_calling/: defs.rs  mod.rs  parser.rs  prompt.rs
service/adapters/tests/: deepseek_cookie_test.rs
service/api/: Cargo.toml
service/api/src/: error.rs  lib.rs  main.rs  state.rs
service/api/src/middleware/: auth.rs  mod.rs
service/api/src/routes/: admin.rs  auth.rs  me.rs  mod.rs  openai.rs
service/api/src/routes/admin/: accounts.rs
service/api/src/routes/v1/: anthropic.rs  chat.rs  messages.rs  mod.rs  models.rs  openai.rs  shared.rs
service/auth/: Cargo.toml
service/auth/src/: error.rs  jwt.rs  keygen.rs  lib.rs  password.rs  validator.rs
service/billing/: Cargo.toml
service/billing/src/: error.rs  lib.rs  subscription.rs
service/db/: Cargo.toml
service/db/migrations/: 001_create_users.sql  002_create_api_keys.sql  003_create_providers.sql  004_create_models.sql  005_create_subscriptions.sql  006_create_transactions.sql  007_create_api_logs.sql  008_seed_admin.sql  009_provider_keys.sql  010_add_browser_accounts.sql  011_seed_provider_keys.sql  012_remove_provider_slug_unique.sql  013_add_session_tracking.sql  014_add_account_name.sql  015_add_provider_api_type.sql  016_seed_models.sql  017_fix_model_slugs.sql  018_add_model_description.sql  019_populate_model_descriptions.sql  020_user_provider_keys.sql  021_model_pricing.sql  022_user_balances.sql  023_token_charges.sql  024_token_packages.sql  025_alter_api_logs.sql  026_drop_subscription.sql  027_seed_pricing.sql  028_fix_prefix_length.sql  029_add_provider_urls.sql  030_drop_models_slug.sql  031_make_api_key_id_nullable.sql  032_add_api_key_type.sql
service/db/src/: crypto.rs  error.rs  lib.rs  migrations.rs  postgres.rs  redis.rs
service/models/: Cargo.toml
service/models/src/: api_log.rs  browser_account.rs  chat.rs  lib.rs  model.rs  model_pricing.rs  provider.rs  provider_key.rs  qr_session.rs  subscription.rs  token_charge.rs  token_package.rs  user.rs  user_balance.rs  user_provider_key.rs
service/router/: Cargo.toml
service/router/src/: context.rs  error.rs  key_scheduler.rs  lib.rs  selector.rs  session_health_checker.rs  strategy.rs
test/: README.md  mod.rs
test/auth/: mod.rs
test/frontend/: api-client.test.js  client-api.test.js  client-pages.test.js  components.test.js
test/integration/: backend_api_test.rs  client_api_test.rs  frontend_test.js  mod.rs  requirements.txt  sdk_test.py
test/models/: mod.rs  model_test.rs  provider_test.rs  subscription_test.rs
test/unit/: mod.rs
test/unit/adapters/: mod.rs
test/unit/api/: mod.rs
test/unit/auth/: jwt_test.rs  password_test.rs
test/unit/frontend/: api-client.test.js  client-pages.test.js  components.test.js
test/unit/models/: user_test.rs
(+27 files in other folders)
