[workspace]
resolver = "2"
members = [
    "crates/api-gateway",
    "crates/router-core",
    "crates/auth-service",
    "crates/billing",
    "crates/models",
    "crates/db",
    "crates/proto",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["NovaChat Team"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Web framework
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "uuid", "chrono", "rust_decimal"] }

# Redis
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }
deadpool-redis = "0.14"

# Utils
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
jsonwebtoken = "9.2"
bcrypt = "0.15"
rust_decimal = { version = "1.33", features = ["serde"] }

# gRPC
tonic = "0.11"
prost = "0.12"

# HTTP client
reqwest = { version = "0.11", features = ["json", "stream"] }

# Config
config = "0.14"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
