[workspace]
resolver = "2"
members = [
    "models",
    "db",
    "auth",
    "api",
    "router",
    "billing",
    "adapters",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["nexus Team"]

[package]
name = "nexus-api"
version.workspace = true
edition.workspace = true

[[bin]]
name = "nexus-api"
path = "main.rs"

[dependencies]
tokio = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
api = { path = "api" }
db = { path = "db" }

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Web framework
axum = { version = "0.7", features = ["macros"] }
tower = { version = "0.4" }
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "uuid", "chrono", "rust_decimal"] }

# Redis
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }
deadpool-redis = "0.14"

# Utils
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
jsonwebtoken = "9.2"
bcrypt = "0.15"
rust_decimal = { version = "1.33", features = ["serde"] }
sha2 = "0.10"

# HTTP client
reqwest = { version = "0.11", features = ["json", "stream"] }

# Async utilities
async-trait = "0.1"
futures-util = "0.3"

# Random number generation
rand = "0.8"

# Config
config = "0.14"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
