[package]
name = "provider_client"
version = "0.1.0"
edition.workspace = true

[dependencies]
reqwest = { workspace = true, features = ["json", "stream"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
futures-util = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }
models = { path = "../models" }
urlencoding = "2.1"
headless_chrome = "1.0"
log = "0.4"