[package]
name = "api"
version.workspace = true
edition.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
jsonwebtoken = { workspace = true }
futures-util = "0.3"
http = "1.1"
reqwest = { workspace = true, features = ["json", "stream"] }
tokio-stream = { version = "0.1", features = ["sync"] }
rand = { workspace = true }
base64 = "0.22"
aes-gcm = "0.10"
hex = "0.4"

models = { path = "../models" }
db = { path = "../db" }
auth = { path = "../auth" }
router = { path = "../router" }
billing = { path = "../billing" }
provider_client = { path = "../adapters" }

[dev-dependencies]
tokio-test = "0.4"
