[package]
name = "db"
version.workspace = true
edition.workspace = true

[dependencies]
tokio = { workspace = true }
sqlx = { workspace = true }
redis = { workspace = true }
deadpool-redis = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
rust_decimal = { workspace = true }
models = { path = "../models" }
aes-gcm = { workspace = true }
base64 = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"