[package]
name = "router"
version.workspace = true
edition.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }

models = { path = "../models" }
db = { path = "../db" }
provider_client = { path = "../adapters" }

[dev-dependencies]
tokio-test = "0.4"
